Fix:fix margin in Recommend.js to make it not overlap with MainNav and HomeNav #99

--- a/front-end/src/home/Recommended.css
+++ b/front-end/src/home/Recommended.css
@@ -1,5 +1,4 @@
 div.Recommended{
-    top: 50px;
-    left: 50px;
-    position: relative;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
